--- a/index.html
+++ b/index.html
@@ -3,9 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Curriculum vitae</title>
+    <link rel="stylesheet" href="Curriculum.css">
 </head>
 <body>
-    <h1></h1>
+    <h1>Antonio Jesus Moreno Palazon</h1>
+
+    <p>Murcia</p>
+
+    <p>645 64 76 64</p>
+
+    <p>antosil2385@gmail.com</p>
+
+    <h2>RESUMEN PROFESIONAL: </h2>
+
+    <p>Estudiante de primer año del grado de formacion profesional DAW.Soy una persona responsable y comprometido, en busca de oportunidades de trabajo a tiempo parcail como gestor de bases de datos.Me apasionan las bases de datos y el tratamiento de los datos.Tambien disfruto mucho programando sobre todo en el paradigma de la POO.Me encantaria poder adquirir experiencia en estos campos, ampliar mis conocimientos y perfeccionar mis habilidades como programador y desarrollador</p>
+
+    <h2>APTITUDES</h2>
+    <ul>
+        <li>Meticulosidad y atencion al detalle</li>
+        <li>Disponiblidad para trabajar los fines de semana asi como algunas mañanas</li>
+        <li>Gestion del tiempo</li>
+        <li>Capacidad para trabajr bajo presion</li>
+    </ul>
+    <ul>
+        <li>Puntualidad</li>
+        <li>Planificacion organizada de tareas de manera efectiva</li>
+        <li>Trabajo en equipo</li>
+        <li>Capacidad multitarea</li>
+    </ul>
 </body>
 </html>
