--- a/index.html
+++ b/index.html
@@ -1,36 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curriculum vitae</title>
+    <title>Mi Currículum</title>
     <link rel="stylesheet" href="Curriculum.css">
 </head>
 <body>
-    <h1>Antonio Jesus Moreno Palazon</h1>
-
-    <p>Murcia</p>
-
-    <p>645 64 76 64</p>
-
-    <p>antosil2385@gmail.com</p>
-
-    <h2>RESUMEN PROFESIONAL: </h2>
-
-    <p>Estudiante de primer año del grado de formacion profesional DAW.Soy una persona responsable y comprometido, en busca de oportunidades de trabajo a tiempo parcail como gestor de bases de datos.Me apasionan las bases de datos y el tratamiento de los datos.Tambien disfruto mucho programando sobre todo en el paradigma de la POO.Me encantaria poder adquirir experiencia en estos campos, ampliar mis conocimientos y perfeccionar mis habilidades como programador y desarrollador</p>
-
-    <h2>APTITUDES</h2>
+    
+    <div class="header">
+    <h1>Tu Nombre</h1>
+    <p>Teléfono: 123456789 Email: correo@ejemplo.com Ciudad: Murcia</p>
+    <li><strong>IDIOMAS: </strong>Inglés B2/Frances B1/Español nativo</li>
+    </div>
+    <div class="Middle">
+    <h2>Experiencia</h2>
+    <p><strong>Desarrolador </strong> sin empresa</p>
     <ul>
-        <li>Meticulosidad y atencion al detalle</li>
-        <li>Disponiblidad para trabajar los fines de semana asi como algunas mañanas</li>
-        <li>Gestion del tiempo</li>
-        <li>Capacidad para trabajr bajo presion</li>
+        <li>Programar</li>
+        <li>Buen lider con Habilidades sociales capaz de dirigir proyectos</li>
     </ul>
+
     <ul>
-        <li>Puntualidad</li>
-        <li>Planificacion organizada de tareas de manera efectiva</li>
-        <li>Trabajo en equipo</li>
-        <li>Capacidad multitarea</li>
+        <li>Desarrollo de apps en entorno web</li>
     </ul>
+    </div>
+    <div class="Middle-footer">
+    <h2>Educación</h2>
+    <p><strong>Grado superior DAW /</strong>FloridaBlanca</p>
+    </div>
+    <div class="footer">
+    <h2>Habilidades</h2>
+    <ul>
+        <li>Desarrollar apps web</li>
+        <li>Analisis de requisitos</li>
+        <li>Codificacion</li>
+        <li>Tester</li>
+        <li>Depuracion</li>
+        <li>Mantenimiento</li>
+    </ul>
+    </div>
+    
 </body>
 </html>
