--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
     
     <div class="header">
-    <h1>Tu Nombre</h1>
-    <p>Teléfono: 123456789 Email: correo@ejemplo.com Ciudad: Murcia</p>
+    <h1>Antonio Jesús Moreno Palazón</h1>
+    <p>Teléfono: 645647664 Email: antosil2385@gmail.com Ciudad: Murcia</p>
     <li><strong>IDIOMAS: </strong>Inglés B2/Frances B1/Español nativo</li>
     </div>
     <div class="Middle">
